src/main/webapp/css/style.css
/* ... */
.panel-heading>div {
    float: left;
    width:4%;
    max-width: 60px;

}

.panel-heading>h3 {
    font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
    display: inline;
    color: #505452;
    padding-left: 40px;
    margin-top:5px;
    margin-bottom:0;
    font-size: 21px;
    font-weight: lighter !important;
    float: left;
    width:70%;

}


input[title="Source Node"], input[title="Source Relation"] {
    min-width: 100px;
}

.infoForm {
    padding-top: 10px;
}
.columnHide, .columnShow {
    cursor: pointer;
}

@media print
{    
    .help-block
    {
        display: none !important;
    }
}
/*
Mimic cursor style from native .dropdown-menu > .disabled > a{} styles,
since `pointer-events: none` kills the cursor state, too. 
*/
.dropdown-menu > .disabled{
    cursor: not-allowed; 
}

/* The real magic ;) */
.dropdown-menu > .disabled > a{
    pointer-events: none;
}

.targetPath { 
    word-break: break-all;
    overflow: hidden;     
}
img+label {
    padding-left: 5px;
}
.noRelationUpdate {
    padding:0 10px 5px 22px;
    margin:0;
}

/*New links view*/
.add, .btn-link, .add:hover, .btn-link:hover, a {
    color: #428BCA !important;
    /*    padding-top:3px;
        padding-bottom: 3px;*/
}
#addRuleButton, .addCommentButton {
    padding-left: 0;
}

button[title*="Click to add"] {
    color: black !important;
}
button[title="Add Constant Expression"] {
    padding-left: 0;
}
/*button[title="Add Instance Generator"] {
   
}
button[title="Add Label Generator"] {
   
}*/

.domain>.commentsHead>a {
    color:#86CEEA !important;
}

button[title="Add Instance Generator"][data-xpath*="/domain/"] {
    color: #86CEEA !important;
}
button[title="Add Label Generator"][data-xpath*="/domain/"] {
    color: #86CEEA !important;
}
button[title="Add Argument"][data-xpath*="/instance_generator"] {
    color: #86CEEA !important;
}
.generatorButtons {
    margin-left: 21px !important;
}
.generatorButtons>button, .additionalGeneratorButtons>button {
    padding-bottom: 0 !important;
}
/*.generatorButtons + .generatorButtons>button, .additionalGeneratorButtons +.additionalGeneratorButtons>button{
    padding-top: 0 !important;
}*/
.additionalGeneratorButtons {
    padding-left: 0;
}


/* Making room for extra table column (numbering)*/
.panel-body {
    padding-left: 0px ;
    padding-right: 0px ;
}
.panel-body>.col-md-12 {
    padding-left: 5px;
    padding-right: 5px;
}
.mappings fieldset, #generatorsTab fieldset {
    padding-left:5px !important;
    padding-right:5px !important;
}
.mCSB_container {
    /*margin-right:10px !important;*/
}
/* Backgrounds and stylin*/

.well {
    background-color: white;
}
.help-block, #configuration p, #config p, #transformation p {
    background-color: #F5F5F5;
    font-style: italic;
}
.actionsToolbar img, #collapseExpandAll-btn .glyphicon{
    margin-left: 5px !important;
    margin-top: 2px !important;
}
#infoWell {
    margin-top: 5px;
    padding: 5px;
}
.selected  {
    border-top: 4px solid black !important;
    border-left: 4px solid black !important;
    border-right: 4px solid black !important;
}
.selected.domain {
    border-bottom: 4px solid black !important;
}
.selected+.range {
    border-bottom: 4px solid black !important;
    border-left: 4px solid black !important;
    border-right: 4px solid black !important;
}

thead.selected+tbody>tr:not(.empty) {
    border-left: 4px solid black !important;
    border-right: 4px solid black !important;
}
thead.selected+tbody>tr.empty {
    border-top: 4px solid black !important;
}
.mapIndex {
    text-align: center;
    padding-left: 1px !important;
    padding-right: 1px !important;
}
.index {
    padding-left: 1px !important;
    padding-right: 1px !important;
}

/*Overriding default customScrollbar styling to conserve space*/
.mCSB_container_wrapper {
    margin-right: 1px !important;
}
.mCSB_container {
    padding-right: 20px !important;
}
.mCS_y_hidden>.mCSB_container{
     padding-right: 0px !important;
}

/* Context menu styles*/
 /* menu header via data attribute */
    .data-title:before {
        content: attr(data-menutitle);
        display: block;
        position: absolute;
        top: 0;
        right: 0;
        left: 0;
        background: #DDD;
        padding: 2px;

        font-family: Verdana, Arial, Helvetica, sans-serif;
        font-size: 11px;
        font-weight: bold;
    }
    .data-title :first-child {
        margin-top: 20px;
    }
    

